add tests to gradle plugin commit_hash:2c4296d80cdd5b640db59a7d1cc75b3b9a9e5d6c