@@ -91,6 +91,11 @@ class GradlePluginModule : Plugin<Project> {
             useJUnitPlatform {
                 includeEngines("spek2")
             }
+            jvmArgs(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED"
+            )
         }
     }
 
